# wizard-world

./: CMakeLists.txt  Game.cpp  Game.h  README.md  State.cpp  State.h  config.ini  main.cpp
states/: GameState.cpp  GameState.h  State.cpp  State.h
